# Rust-Task-App

./: Cargo.toml  Dockerfile  Dockerfile_alpine  README.md  compose.yaml  env.example
examples/: uuid.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_task_table.rs  m20220101_000001_create_user_table.rs  m20241203_073620_create_task_table.rs  m20241203_073620_create_user_table.rs  m20241205_064650_create_user_profile_table.rs  m20241231_054040_create_label_table.rs  m20241231_055020_create_task_label_map_table.rs
src/: api_response.rs  error.rs  main.rs  serializer.rs  utils.rs
src/controller/: auth_controller.rs  label_controller.rs  mod.rs  task_controller.rs  user_controller.rs
src/form/: label_form.rs  mod.rs  task_form.rs
src/middlewares/: auth_guard.rs
src/models/: label.rs  mod.rs  task.rs  task_label.rs  user.rs
src/models/_entities/: label.rs  mod.rs  prelude.rs  task.rs  task_label.rs  user.rs
