[package]
name = "task_app"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
# sqlx = { version="0.8.2", features=["sqlite", "runtime-tokio", "tls-native-tls", "macros", "chrono"]}
sea-orm = { version = "1.1.10", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "sqlx-postgres",
] }
tower-http = { version = "0.6.2", features = ["trace"] }

chrono = { version = "0.4.40", features = ["serde"] }

# serde
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }

# env
dotenvy = { version = "0.15.7" }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "ansi"] }

validator = { version = "0.20.0", features = ["derive"] }

async-trait = "0.1.88"

# hashing
sha2 = { version = "0.10.8" }
hmac = "0.12.1"
hex = "0.4.3"

jsonwebtoken = "9.3.1"

uuid = { version = "1.16.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
